<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory android:title="Camera">

        <Preference
            android:key="@string/key_camera_calibration"
            android:title="@string/title_camera_calibration"
            android:summary="@string/summary_camera_calibration" >
            <intent android:action="android.intent.action.VIEW"
                android:targetPackage="com.grouph.ces.carby"
                android:targetClass="com.grouph.ces.carby.camera_calibration.CameraCalibrationActivity"/>
        </Preference>

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="Storage">
        <Preference
            android:key="@string/key_wipe_consume"
            android:title="@string/title_wipe_consume"
            android:summary="@string/summary_wipe_consume"/>
        <Preference
            android:key="@string/key_wipe_all"
            android:title="@string/title_wipe_all"
            android:summary="@string/summary_wipe_all"/>
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="Dev">
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/key_dev_mode"
            android:title="@string/title_dev_mode"
            android:summary="@string/summary_dev_mode"/>
    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>